--- a/WebForm/Web.config
+++ b/WebForm/Web.config
@@ -16,17 +16,38 @@
   </system.codedom>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="ServiceSoap">
-          <security mode="Transport" />
-        </binding>
-        <binding name="ServiceSoap1" />
-      </basicHttpBinding>
+        <basicHttpBinding>
+            <binding name="GoogleServiceSoap">
+                <security mode="Transport" />
+            </binding>
+            <binding name="GoogleServiceSoap1" />
+            <binding name="ProductServiceSoap">
+                <security mode="Transport" />
+            </binding>
+            <binding name="ProductServiceSoap1" />
+            <binding name="UserServiceSoap">
+                <security mode="Transport" />
+            </binding>
+            <binding name="UserServiceSoap1" />
+            <binding name="CommentServiceSoap">
+                <security mode="Transport" />
+            </binding>
+            <binding name="CommentServiceSoap1" />
+        </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="https://localhost:44339/Service.asmx" binding="basicHttpBinding"
-        bindingConfiguration="ServiceSoap" contract="Service.ServiceSoap"
-        name="ServiceSoap" />
+        <endpoint address="https://localhost:44339/GoogleService.asmx"
+            binding="basicHttpBinding" bindingConfiguration="GoogleServiceSoap"
+            contract="GoogleService.GoogleServiceSoap" name="GoogleServiceSoap" />
+        <endpoint address="https://localhost:44339/ProductService.asmx"
+            binding="basicHttpBinding" bindingConfiguration="ProductServiceSoap"
+            contract="ProductService.ProductServiceSoap" name="ProductServiceSoap" />
+        <endpoint address="https://localhost:44339/UserService.asmx"
+            binding="basicHttpBinding" bindingConfiguration="UserServiceSoap"
+            contract="UserService.UserServiceSoap" name="UserServiceSoap" />
+        <endpoint address="https://localhost:44339/CommentService.asmx"
+            binding="basicHttpBinding" bindingConfiguration="CommentServiceSoap"
+            contract="CommentService.CommentServiceSoap" name="CommentServiceSoap" />
     </client>
   </system.serviceModel>
 </configuration>
