--- a/WebForm/WebForm.csproj
+++ b/WebForm/WebForm.csproj
@@ -69,23 +69,48 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Connected Services\Service\Service.disco" />
-    <None Include="Connected Services\Service\configuration91.svcinfo" />
-    <None Include="Connected Services\Service\configuration.svcinfo" />
-    <None Include="Connected Services\Service\Reference.svcmap">
-      <Generator>WCF Proxy Generator</Generator>
-      <LastGenOutput>Reference.cs</LastGenOutput>
-    </None>
     <Content Include="assets\css\login.css" />
     <Content Include="assets\css\style.css" />
     <Content Include="assets\js\login.js" />
     <Content Include="ChangePassword.aspx" />
+    <None Include="Connected Services\CommentService\CommentService.wsdl" />
+    <None Include="Connected Services\GoogleService\GoogleService.disco" />
+    <None Include="Connected Services\GoogleService\configuration91.svcinfo" />
+    <None Include="Connected Services\GoogleService\configuration.svcinfo" />
+    <None Include="Connected Services\GoogleService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\ProductService\ProductService.disco" />
+    <None Include="Connected Services\ProductService\configuration91.svcinfo" />
+    <None Include="Connected Services\ProductService\configuration.svcinfo" />
+    <None Include="Connected Services\ProductService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\UserService\UserService.disco" />
+    <None Include="Connected Services\UserService\configuration91.svcinfo" />
+    <None Include="Connected Services\UserService\configuration.svcinfo" />
+    <None Include="Connected Services\UserService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Connected Services\CommentService\CommentService.disco" />
+    <None Include="Connected Services\CommentService\configuration91.svcinfo" />
+    <None Include="Connected Services\CommentService\configuration.svcinfo" />
+    <None Include="Connected Services\CommentService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Default.aspx" />
     <Content Include="GoogleLogin.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Logout.aspx" />
+    <Content Include="products\add.aspx" />
+    <Content Include="products\info.aspx" />
+    <Content Include="products\list.aspx" />
     <Content Include="ShowUser.aspx" />
     <Content Include="Web.config" />
-    <None Include="Connected Services\Service\Service.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangePassword.aspx.cs">
@@ -95,7 +120,22 @@
     <Compile Include="ChangePassword.aspx.designer.cs">
       <DependentUpon>ChangePassword.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Connected Services\Service\Reference.cs">
+    <Compile Include="Connected Services\CommentService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\GoogleService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\ProductService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Connected Services\UserService\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -121,6 +161,34 @@
     <Compile Include="Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Logout.aspx.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Logout.aspx.designer.cs">
+      <DependentUpon>Logout.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="products\add.aspx.cs">
+      <DependentUpon>add.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="products\add.aspx.designer.cs">
+      <DependentUpon>add.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="products\info.aspx.cs">
+      <DependentUpon>info.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="products\info.aspx.designer.cs">
+      <DependentUpon>info.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="products\list.aspx.cs">
+      <DependentUpon>list.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="products\list.aspx.designer.cs">
+      <DependentUpon>list.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShowUser.aspx.cs">
       <DependentUpon>ShowUser.aspx</DependentUpon>
@@ -138,9 +206,18 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Connected Services\Service\WebForm.Service.UserClass.datasource">
+    <None Include="Connected Services\GoogleService\GoogleService.wsdl" />
+    <Content Include="Connected Services\GoogleService\WebForm.GoogleService.GetTokenResponse.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Content>
+    <Content Include="Connected Services\GoogleService\WebForm.GoogleService.GoogleSignUpResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <Content Include="Connected Services\GoogleService\WebForm.GoogleService.UserClass.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Content>
+    <None Include="Connected Services\ProductService\ProductService.wsdl" />
+    <None Include="Connected Services\UserService\UserService.wsdl" />
     <None Include="packages.config" />
     <Content Include="SiteMaster.Master" />
     <Content Include="Properties\DataSources\System.Data.DataTable.datasource" />
@@ -155,7 +232,10 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Connected Services\Service\" />
+    <WCFMetadataStorage Include="Connected Services\CommentService\" />
+    <WCFMetadataStorage Include="Connected Services\GoogleService\" />
+    <WCFMetadataStorage Include="Connected Services\ProductService\" />
+    <WCFMetadataStorage Include="Connected Services\UserService\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
